edited the css for about

--- a/Pages/About.html
+++ b/Pages/About.html
@@ -31,7 +31,7 @@
     <main>
         <div>
                 <a name="about-us"></a>
-            <section class="about-us">
+            <section class="aboutus">
                 <Header>
                     <img src="/images/itohan.jpg" alt="">
                     <span id="about-header-text">About Han</span>
@@ -80,7 +80,7 @@
                         <form action="">
                             <input type="email" placeholder="Your Mail Address">
                             <br>
-                            <textarea cols="80" rows="8"></textarea>
+                            <textarea cols="100" rows="10"></textarea>
                             <br>
                             <button>Send <span><img src="/icons/sent-mail.svg" height="15px" alt=""></span></button>
                         </form>
@@ -130,7 +130,7 @@
             <section class="contact-us-header">
                 <h2>Contact Us</h2>
                 <div>
-                    <a href="https://bit.ly/3pmXcxY" class="fa fa-whatsapp" target="_blank"><div>Text me on Whatsapp</div></a>
+                    <a href="https://bit.ly/3pmXcxY" class="fa fa-whatsapp" target="_blank"><div>Text us on Whatsapp</div></a>
                     
                 </div>
                 <div>
