--- a/Pages/Catalogue.html
+++ b/Pages/Catalogue.html
@@ -67,7 +67,7 @@
             <section class="contact-us-header">
                 <h2>Contact Us</h2>
                 <div>
-                    <a href="https://bit.ly/3pmXcxY" class="fa fa-whatsapp" target="_blank"><div>Text me on Whatsapp</div></a>
+                    <a href="https://bit.ly/3pmXcxY" class="fa fa-whatsapp" target="_blank"><div>Text us on Whatsapp</div></a>
                     
                 </div>
                 <div>
