--- a/Pages/About.html
+++ b/Pages/About.html
@@ -19,10 +19,10 @@
         <nav  class="nav-bar">
             <ul>
                 <li> <a href="/index.html">HOME</a> </li>
-                <li><a href="/Pages/Catalogue.html">CATALOGUE</a></li>
+                <li><a href="#">CATALOGUE</a></li><!--/Pages/Catalogue.html-->
                 <li><a href="/index.html"><img src="/images/logo.jpg" alt="Hans' Munchies"></a></li>
                 <li><a href="/Pages/About.html">ABOUT</a></li>
-                <li><a href="/Pages/Cart.html">CART</a></li>
+                <li><a href="#">CART</a></li><!--/Pages/Cart.html-->
             </ul>
         </nav>
                 <hr class="pink-line-header">
